fix: Add support for base block outline shape